--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,4 +15,5 @@ code {
 
 html {
   background-image: url("https://hullwhatson.com/wp-content/uploads/2020/04/Gaming-Video-Games-Relax-De-Stress.jpg");
+  background-size: cover;
 }
